@@ -34,6 +34,7 @@
         class=".viewlet.ServiceNavigation"
         template="templates/viewlet.pt"
         permission="zope2.View"
+        layer="ftw.servicenavigation.interfaces.IServicenavigationLayer"
         />
 
     <configure zcml:condition="installed ftw.theming">
