@@ -1,0 +1,6 @@
+from zope.interface import Interface
+
+
+class IServicenavigationLayer(Interface):
+    """Browser layer for bern.web.
+    """
