@@ -1,6 +1,7 @@
 <configure
     xmlns="http://namespaces.zope.org/zope"
     xmlns:genericsetup="http://namespaces.zope.org/genericsetup"
+    xmlns:upgrade-step="http://namespaces.zope.org/ftw.upgrade"
     i18n_domain="ftw.servicenavigation">
 
     <genericsetup:registerProfile
@@ -10,5 +11,12 @@
         description="Install ftw.servicenavigation"
         provides="Products.GenericSetup.interfaces.EXTENSION"
         />
+
+    <include package="ftw.upgrade" file="meta.zcml" />
+    <upgrade-step:directory
+        profile="ftw.servicenavigation:default"
+        directory="upgrades"
+        />
+
 
 </configure>
