@@ -1,0 +1,5 @@
+<?xml version="1.0"?>
+<layers>
+    <layer name="ftw.servicenavigation"
+           interface="ftw.servicenavigation.interfaces.IServicenavigationLayer" />
+</layers>
