@@ -1,6 +1,5 @@
 <?xml version="1.0"?>
 <metadata>
-    <version>1</version>
     <dependencies>
         <dependency>profile-collective.z3cform.datagridfield:default</dependency>
         <dependency>profile-plone.formwidget.contenttree:default</dependency>
