@@ -5,5 +5,8 @@ Changelog
 1.0.0 (unreleased)
 ------------------
 
+- Add browserlayer.
+  [mathias.leimgruber]
+
 - Initial implementation
   [jone]
